Update website data

--- a/index.html
+++ b/index.html
@@ -1,38 +1,58 @@
-
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ternafit - Supporting the Tigrean Community</title>
-    <meta name="description" content="Ternafit is dedicated to supporting the Tigrean community through humanitarian aid, education, and advocacy." />
-    <meta name="author" content="Ternafit" />
 
-    <meta property="og:title" content="Ternafit - Supporting the Tigrean Community" />
-    <meta property="og:description" content="Join us in our mission to support the Tigrean community through humanitarian aid, education, and advocacy." />
+    <title>Ternafit - Empowering the Tigrean Community</title>
+    <meta name="description"
+        content="Ternafit empowers the Tigrean community through humanitarian relief, educational support, and advocacy for a sustainable future." />
+    <meta name="keywords"
+        content="Tigrean support, humanitarian aid, education, advocacy, nonprofit organization, Ternafit" />
+    <meta name="author" content="Ternafit Team" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="Ternafit - Empowering the Tigrean Community" />
+    <meta property="og:description"
+        content="Join Ternafit in supporting Tigrean families through relief aid, education, and advocacy. Together, we make a difference." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/public/images/ternafit-logo.png" />
+    <meta property="og:url" content="https://ternafit.org" />
 
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@ternafit" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-    
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@400;500;600;700&display=swap" />
-  </head>
+    <meta name="twitter:creator" content="@ternafit" />
+    <meta name="twitter:title" content="Ternafit - Empowering the Tigrean Community" />
+    <meta name="twitter:description"
+        content="Ternafit supports Tigrean communities with humanitarian aid, education, and advocacy." />
+    <meta name="twitter:image" content="/public/images/ternafit-logo.png" />
 
-  <body>
-    <div id="root"></div>
-    <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
-    <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
+    <!-- Favicon -->
+    <link rel="icon" href="/public/images/ternafit-logo.png" type="image/png" />
+
+    <!-- Fonts -->
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@400;500;600;700&display=swap" />
+</head>
+
+<body>
+    <div id="root" role="main" aria-label="Ternafit main content"></div>
+
+
     <script type="module" src="/src/main.tsx"></script>
-<script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
-<script>
-  kofiWidgetOverlay.draw('ternafit', {
-    'type': 'floating-chat',
-    'floating-chat.donateButton.text': 'Support Us',
-    'floating-chat.donateButton.background-color': '#f45d22',
-    'floating-chat.donateButton.text-color': '#fff'
-  });
-</script>
-  </body>
+
+    <!-- Ko-fi Floating Button -->
+    <script src="https://storage.ko-fi.com/cdn/scripts/overlay-widget.js"></script>
+    <script>
+        kofiWidgetOverlay.draw('ternafit', {
+            'type': 'floating-chat',
+            'floating-chat.donateButton.text': 'Support Us',
+            'floating-chat.donateButton.background-color': '#f45d22',
+            'floating-chat.donateButton.text-color': '#fff'
+        });
+    </script>
+</body>
+
 </html>
