Fix missing translation keys for home, about, work, and news pages
- Added missing home page translations (CTA buttons, impact section, awards)
- Added missing about page translations (values, join cause, impact so far)
- Added missing work page translations (volunteer section, campaigns)
- Added missing news translations (no news found, loading states)
- Fixed syntax errors in translations.ts file
- Ensured all translation keys display proper text instead of key names

--- a/index.html
+++ b/index.html
@@ -61,11 +61,15 @@
     <!-- Ko-fi Floating Button -->
     <script src="https://storage.ko-fi.com/cdn/scripts/overlay-widget.js"></script>
     <script>
-        kofiWidgetOverlay.draw('ternafit', {
-            'type': 'floating-chat',
-            'floating-chat.donateButton.text': 'Support Us',
-            'floating-chat.donateButton.background-color': '#f45d22',
-            'floating-chat.donateButton.text-color': '#fff'
+        document.addEventListener('DOMContentLoaded', function() {
+            if (typeof kofiWidgetOverlay !== 'undefined') {
+                kofiWidgetOverlay.draw('ternafit', {
+                    'type': 'floating-chat',
+                    'floating-chat.donateButton.text': 'Support Us',
+                    'floating-chat.donateButton.background-color': '#f45d22',
+                    'floating-chat.donateButton.text-color': '#fff'
+                });
+            }
         });
     </script>
 </body>
