Update navigation, translations, and dropdown logic; improve footer layout and translation keys

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <!-- Ko-fi Floating Button -->
     <script src="https://storage.ko-fi.com/cdn/scripts/overlay-widget.js"></script>
-    <script>
+    <!-- <script>
         document.addEventListener('DOMContentLoaded', function() {
             if (typeof kofiWidgetOverlay !== 'undefined') {
                 kofiWidgetOverlay.draw('ternafit', {
@@ -71,7 +71,7 @@
                 });
             }
         });
-    </script>
+    </script> -->
 </body>
 
 </html>
