fix: use proper logo images link

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:title" content="URGENT: Help 5.4M People in Tigray Crisis | Ternafit" />
     <meta property="og:description"
         content="Tigray faces a humanitarian crisis. Your donation provides emergency food, water, and medical care. 89% goes directly to families. Donate now." />
-    <meta property="og:image" content="/images/tigray-crisis-2024.jpg" />
+    <meta property="og:image" content="/images/logos/ternafit-logo-nobg.png" />
     
     <!-- Add structured data for donations -->
     <script type="application/ld+json">
@@ -42,10 +42,10 @@
     <meta name="twitter:title" content="Ternafit - Empowering the Tigrean Community" />
     <meta name="twitter:description"
         content="Ternafit supports Tigrean communities with humanitarian aid, education, and advocacy." />
-    <meta name="twitter:image" content="/public/images/ternafit-logo.png" />
+    <meta name="twitter:image" content="/images/logos/ternafit-logo-nobg.png" />
 
     <!-- Favicon -->
-    <link rel="icon" href="/images/ternafit-logo.png" type="image/png" />
+    <link rel="icon" href="/images/logos/ternafit-logo-nobg.png" type="image/png" />
 
     <!-- Fonts -->
     <link rel="stylesheet"
