UX: improve homepage hero fallback, CTA banner, translations; News: switch to RSS function, add filters/pagination, robust fallbacks; SEO/Perf: preconnect + OG; Fix: category labels fallback and homepage news fallback

--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
     <meta name="keywords"
         content="Tigray crisis, humanitarian aid, emergency donation, Ethiopia conflict, Tigrean support, war relief, medical aid, food security, children in crisis" />
     
+    <!-- Performance: Preconnect to RSS/news sources -->
+    <link rel="preconnect" href="https://feeds.reuters.com" crossorigin>
+    <link rel="preconnect" href="https://reports.unocha.org" crossorigin>
+    <link rel="preconnect" href="https://www.theguardian.com" crossorigin>
+    <link rel="preconnect" href="https://www.ethiopia-insight.com" crossorigin>
+    <link rel="preconnect" href="https://borkena.com" crossorigin>
+    <link rel="preconnect" href="https://feeds.bbci.co.uk" crossorigin>
+    
     <!-- Crisis-focused Open Graph -->
     <meta property="og:title" content="URGENT: Help 5.4M People in Tigray Crisis | Ternafit" />
     <meta property="og:description"
@@ -43,6 +51,10 @@
     <meta name="twitter:description"
         content="Ternafit supports Tigrean communities with humanitarian aid, education, and advocacy." />
     <meta name="twitter:image" content="/images/logos/ternafit-logo-nobg.png" />
+
+    <!-- Open Graph defaults -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.ternafit.org/" />
 
     <!-- Favicon -->
     <link rel="icon" href="/images/logos/ternafit-logo-nobg.png" type="image/png" />
